# tkinter-a11y-lint

./: .gitignore  .pylintrc  LICENSE  README.md  WCAG_CONTRAST_README.md  pyproject.toml  setup.py  test_contrast_integration.py  wcag_contrast_checker.py
examples/: bad_example.py  good_example.py
tests/: test_imports.py  test_plugin.py
tkinter_a11y_lint/: __init__.py  plugin.py
